--- a/task.html
+++ b/task.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- ------------------------------------------------------------------------------------------------------------ -->
-    <div id="popup-container" class="dialog-bg d-none"></div>
+    <div id="board_popup_section" class="dialog-bg d-none"></div>
 
     <div class="task-container">
         <div class="task-header">
