renamed classes from task css

--- a/contacts.html
+++ b/contacts.html
@@ -99,7 +99,7 @@
                             <div class="d-flex textHorizontal contact-popup-buttons fontSize20">
                                 <button class="button outline-btn"
                                     onclick="slideOut('contact_popup', 'contact_popup_section', 200)"
-                                    id="cancelBtnMobileId">
+                                    id="cancel_btn">
                                     <spline id="editCancelButtonId">Cancel</spline>
 
                                     <svg class="colorOnHover" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
