--- a/board.html
+++ b/board.html
@@ -131,7 +131,7 @@
 
     <section class="task-popup-bg d-none" id="board_task_popup_section">
 
-        <div class="addTaskPopupPosition d-flex" id="board_task_popup"><div>
+        <div class="task-edit-popup d-flex" id="board_task_popup"><div>
 
     </section>
     <!-- ------------------------------------------------------------------------->
@@ -141,12 +141,12 @@
 
     <section class="task-popup-bg d-none" id="edit_popup_section">
 
-        <div class="addTaskPopupPosition d-flex" id="edit_popup">
+        <div class="task-edit-popup d-flex" id="edit_popup">
 
            
 
-            <div onclick="stopBody(event)" class="contentPositionAddTaskPopup">
-                <div class="addTaskPopupHeadlineContainer">
+            <div onclick="stopBody(event)" class="task-popup-content">
+                <div class="task-popup-headline-container">
                     <div class="fontSize61"><b>Edit Task</b></div>
                     <div class="close-hover close-popup" onclick="slideOut('edit_popup', 'edit_popup_section', 200)">
                         <img src="./img/close.svg" alt="">
