add task button board responsive

--- a/board.html
+++ b/board.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <button onclick="addTaskFromBoard(), statusSelected('toDo')" id="button-ad-task" type="button"
-                    class="button blue-btn fontSize20">
+                    class="button add-task-button fontSize20">
                     <span class="addTaskText">Add task</span>
                     <img src="img/plus-white.svg">
                 </button>
