--- a/summary.html
+++ b/summary.html
@@ -36,10 +36,10 @@
     <div class="content">
         <div class="width-100P column">
             <div class="width-100P main-container">
-                <div class="leftContainer">
+                <div class="left-container">
                     <div id="header-summary">
                         <span class="fontSize61"><b>Summary</b></span>
-                        <div class="blueLineWithText">
+                        <div class="blue-line-with-text">
                             <div class="summary-line"></div>
                             <div class="headline">
                                 <div class="fontSize27">Key Metrics at a Glance</div>
@@ -54,7 +54,7 @@
                                     <div class="penHover">
                                         <img class="data-panel-small-img" src="./img/pen-round-blue.png">
                                     </div>
-                                    <div class="columnCenter">
+                                    <div class="column-center">
                                         <div id="to-dos" class="fontSize64">0
                                         </div>
                                         <div class="fontSize20">To-do</div>
