--- a/privacy-police.html
+++ b/privacy-police.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="quicklinksContainer">
+    <div class="quicklinks-container">
         <div>
             <div class="fontSize61 mb32">
                 <b style="padding-right: 25px;">Privacy Policy</b>
