--- a/help.html
+++ b/help.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="quicklinksContainer">
+    <div class="quicklinks-container">
 
         <span class="fontSize61 column mb32">
             <b>Help</b>
