--- a/legalNotice.html
+++ b/legalNotice.html
@@ -34,31 +34,28 @@
         </div>
     </div>
 
-    <div class="quicklinksContainer">
+    <div class="quicklinks-container">
 
         <span class="fontSize61 mb32 column">
             <b>Legal Notice</b>
         </span>
 
-
-        <span class="fontSize27 column mb16">
+        <span class="fontSize27 column">
             <b>Imprint</b>
         </span>
         <span class="fontSize16 mb24 column">
             Lina Wionsek<br>
-            David Peterka<br>
-            Bernhard Sigl
         </span>
 
         <span class="fontSize20 column">
             <b>Exploring the Board</b>
         </span>
         <span class="fontSize26 mb24 column">
-            Email: [Email]
+            <span>Email: <a href="mailto:lina.wionsek@gmx.de">lina.wionsek&#64;gmx.de</a></span>
         </span>
+        
 
-
-        <span class="fontSize20 column">
+        <span class="fontSize20 column mt24">
             <b>Acceptance of terms</b>
         </span>
         <span class="fontSize16 mb24 column">
