--- a/legalNotice.html
+++ b/legalNotice.html
@@ -36,11 +36,11 @@
 
     <div class="quicklinks-container">
 
-        <span class="fontSize61 mb32 column">
+        <span class="fontSize61 quicklinks-headline column">
             <b>Legal Notice</b>
         </span>
 
-        <span class="fontSize27 column">
+        <span class="fontSize20 column">
             <b>Imprint</b>
         </span>
         <span class="fontSize16 mb24 column">
