--- a/privacy-police.html
+++ b/privacy-police.html
@@ -33,7 +33,7 @@
 
     <div class="quicklinks-container">
         <div>
-            <div class="fontSize61 mb32">
+            <div class="fontSize61 quicklinks-headline">
                 <b style="padding-right: 25px;">Privacy Policy</b>
             </div>
             <span class="fontSize27 mb10 column">
@@ -43,31 +43,17 @@
                 Lina Wionsek<br>
                 Waldhausenerstraße 117<br>
                 41061 Mönchengladbach<br><br>
-
-                David Peterka<br>
-                Jägergasse 55a<br>
-                06463 Reinstedt<br><br>
-
-                Bernhard Sigl<br>
-                Dorfstraße 58<br>
-                85737 Ismaning
             </span>
-            <span class="fontSize27 mb10 column"><b>Vertreten durch:</b>
-                <span class="fontSize16 mb35 column">
-                    Lina Wionsek<br>
-                    David Peterka<br>
-                    Bernhard Sigl
-                </span>
-                <span class="fontSize27 mb10">
+            <span class="fontSize27 mb10 column"><b>Vertreten durch:</b></span>
+                <span class="fontSize16 column">
+                    Lina Wionsek
+                </span><br>
+                <span class="fontSize16 mb10">
                     <b>Kontakt:</b>
                 </span>
                 <span class="fontSize16 mb35">
                     Lina Wionsek<br>
-                    E-Mail: <a href='mailto:lina.wionsek@gmx.de'>lina.wionsek@gmx.de</a></br><br>
-                    David Peterka<br>
-                    E-Mail: <a href='mailto:david_peterka@yahoo.de'>david_peterka@yahoo.de</a></br><br>
-                    Bernhard Sigl<br>
-                    E-Mail: <a href='mailto:b-sigl@live.de'>b-sigl@live.de</a></br>
+                    <b>E-Mail:</b> <a href='mailto:lina.wionsek@gmx.de'>lina.wionsek@gmx.de</a></br><br>
                 </span>
                 <span class="fontSize16">
                     Website Impressum erstellt durch
