template class renaming

--- a/board.html
+++ b/board.html
@@ -354,7 +354,7 @@
         </div>
     </section>
 
-    <section class="success-info horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
+    <section class="success-info horicontalAndVertical fontSize20 d-none" id="success_info_container">
         Contact succesfully created
     </section>
     <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
