--- a/contacts.html
+++ b/contacts.html
@@ -90,7 +90,7 @@
                             </div>
                             <input type="text" placeholder="Name" id="inputNameId" class="fontSize20" required>
                             <input type="email" placeholder="Email" id="inputEmailId" class="fontSize20" required>
-                            <input type="tel" pattern="[0-9+ ]+" placeholder="Phone" id="inputPhoneId"
+                            <input type="tel" pattern="[0-9+ ]+" placeholder="Phone" id="input_phone"
                                 class="fontSize20"
                                 oninvalid="this.setCustomValidity('Invalid input! Only + and numbers from 0-9 are allowed')"
                                 oninput="this.setCustomValidity('')" required>
@@ -201,7 +201,7 @@
                 </div>
             </section>
 
-            <section class="success-info horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
+            <section class="success-info horicontalAndVertical fontSize20 d-none" id="success_info_container">
             </section>
         </div>
     </div>
