--- a/legalNotice.html
+++ b/legalNotice.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), userCircle(), hideSidebarLinks()">
+<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), showUserCircle(), hideSidebarLinks()">
     <header>
         <div id="sidebarArea"></div>
         <div id="headerArea"></div>
@@ -123,7 +123,6 @@
         </div>
     </div>
 
-    <!-- <div class="emptyContainer" id="emptyContainer"></div> -->
 </body>
 
 </html>
