--- a/privacy-police.html
+++ b/privacy-police.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), userCircle(), hideSidebarLinks()">
+<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), showUserCircle(), hideSidebarLinks()">
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
     <div id="menu-header-container" class="menu-header-container d-none">
@@ -68,7 +68,7 @@
             <img src="./img/arror-left.svg">
         </div>
     </div>
-    <!-- <div class="emptyContainer" id="emptyContainer"></div> -->
+
 
 </body>
 
