--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
             <a href="./legalNotice.html">Legal Notice</a>
         </div>
     </div>
-    <section class="success-info horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
+    <section class="success-info horicontalAndVertical fontSize20 d-none" id="success_info_container">
     </section>
 
 
