--- a/task.html
+++ b/task.html
@@ -222,7 +222,7 @@
 
     </div>
     <!-- ------------------------------------------------------------------------------------------------------------ -->
-    <section class="success-info horicontalAndVertical fontSize20 d-none" id="successfullyCreatedId">
+    <section class="success-info horicontalAndVertical fontSize20 d-none" id="success_info_container">
         Contact succesfully created
     </section>
 
