--- a/register.html
+++ b/register.html
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="width-100P">
-                        <div class="checkboxRememberMeContainer fontSize16">
+                        <div class="checkbox-container fontSize16">
                             <input type="checkbox" name="myCheckbox" id="register_checkbox" value="yes" required>
                             <label for="myCheckbox">I accept the</label><br>
                             <a onclick="" href="./privacy-police.html">Privacy policy</a>
