changed multiple things

--- a/task.html
+++ b/task.html
@@ -109,7 +109,7 @@
                                 <img id="contact_select_arrow_down" src="./img/arrow-down.svg" alt="">
                             </div>
                             <div id="contact_list_container" class="d-none">
-                                <div id="contact_list"></div>
+                                <div id="contact_list" class="contact-list"></div>
                                 <div onclick="openAddContactPopup()" class="button blue-btn">
                                     Add contact
                                     <img src="./img/add-task-person-add.svg" alt="">
