--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
                         <input required type="text" minlength="4" placeholder="Name" id="register_name">
                         <input class="mt-24" required type="email" minlength="4" placeholder="Email" id="register_email">
                         <div class="warning-field">
-                            <span id="warning-email" class="d-none">
+                            <span id="warning_email" class="d-none">
                                 This email address already exists.
                             </span>
                         </div>
