changed open task js name

--- a/board.html
+++ b/board.html
@@ -22,7 +22,7 @@
     <!-- 
     <script defer src="script/board-addTask-teamfunctions.js"></script> -->
     <script defer src="./script/board.js"></script>
-    <script defer src="./script/board-openTask.js"></script>
+    <script defer src="./script/boardOpenTask.js"></script>
 </head>
 
 
