--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/summary.css">
     <!-- token -->
-    <script defer src="script/saveAndLoad.js"></script>
+    <script defer src="script/storage.js"></script>
     <script defer src="script/contacts.js"></script>
 
 </head>
