--- a/privacy-police.html
+++ b/privacy-police.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <script defer src="templates/templates.js"></script>
-    <script defer src="script/saveAndLoad.js"></script>
+    <script defer src="script/storage.js"></script>
     <link rel="stylesheet" href="templates/header_sidebar.css">
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css">
