--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <script src="script/contacts.js"></script>
     <script defer src="script/register.js"></script>
     <script defer src="./templates/templates.js"></script>
-    <script src="script/saveAndLoad.js"></script>
+    <script src="script/storage.js"></script>
 </head>
 
 <body onload="initRegister()">
