--- a/summary.html
+++ b/summary.html
@@ -15,7 +15,7 @@
 
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/summary.js"></script>
-    <script defer src="./script/saveAndLoad.js"></script>
+    <script defer src="./script/storage.js"></script>
     <script defer src="./img/svg.js"></script>
 </head>
 
