--- a/board.html
+++ b/board.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
 
-    <script src="./script/saveAndLoad.js"></script>
+    <script src="./script/storage.js"></script>
     <script src="./script/contacts.js"></script>
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/task.js"></script>
