--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help</title>
-    <script defer src="script/saveAndLoad.js"></script>
+    <script defer src="script/storage.js"></script>
     <script defer src="templates/templates.js"></script>
 
     <link rel="stylesheet" href="style/fonts.css">
