--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 
-    <script defer src="script/saveAndLoad.js"></script>
+    <script defer src="script/storage.js"></script>
     <script defer src="script/task.js"></script>
     <script defer src="script/contacts.js"></script>
     <script defer src="script/register.js"></script>
