--- a/legalNotice.html
+++ b/legalNotice.html
@@ -7,7 +7,7 @@
     <title>Legal Notice</title>
 
     <script defer src="templates/templates.js"></script>
-    <script defer src="script/saveAndLoad.js"></script>
+    <script defer src="script/storage.js"></script>
 
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
