--- a/task.html
+++ b/task.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AddTask</title>
-    <script src="./script/saveAndLoad.js"></script>
+    <script src="./script/storage.js"></script>
     <!-- <script defer src="script/addTask-templates.js"></script> -->
     <!-- <script defer src="script/board-addTask-teamfunctions.js"></script> -->
     <script defer src="./templates/templates.js"></script>
