--- a/contacts.html
+++ b/contacts.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
     <!-- sidebar and header -->
-    <link rel="stylesheet" href="templates/header_sidebar.css">
-    <link rel="stylesheet" href="style/style.css">
-    <script defer src="templates/templates.js"></script>
+    <link rel="stylesheet" href="./templates/header_sidebar.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <script defer src="./templates/templates.js"></script>
     <!-- contacts -->
-    <link rel="stylesheet" href="style/contacts.css">
-    <link rel="stylesheet" href="style/contacts-addContact.css">
-    <link rel="stylesheet" href="style/contacts-mediaQuery.css">
+    <link rel="stylesheet" href="./style/contacts.css">
+    <link rel="stylesheet" href="./style/contacts-addContact.css">
+    <link rel="stylesheet" href="./style/contacts-mediaQuery.css">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/fonts.css">
-    <link rel="stylesheet" href="style/summary.css">
+    <link rel="stylesheet" href="./style/fonts.css">
+    <link rel="stylesheet" href="./style/summary.css">
     <!-- token -->
-    <script defer src="script/storage.js"></script>
-    <script defer src="script/contacts.js"></script>
+    <script defer src="./script/storage.js"></script>
+    <script defer src="./script/contacts.js"></script>
+    <script defer src="./script/contactMobile.js"></script>
 
 </head>
 
