--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
 
-    <link rel="stylesheet" href="style/animation.css">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/login.css">
-    <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./style/animation.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/login.css">
+    <link rel="stylesheet" href="./style/fonts.css">
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
 
-    <script defer src="script/storage.js"></script>
-    <script defer src="script/task.js"></script>
-    <script defer src="script/contacts.js"></script>
-    <script defer src="script/register.js"></script>
-    <script defer src="script/login.js"></script>
+    <script defer src="./script/storage.js"></script>
+    <script defer src="./script/task.js"></script>
+    <script defer src="./script/contacts.js"></script>
+    <script defer src="./script/register.js"></script>
+    <script defer src="./script/login.js"></script>
 
 </head>
 
