--- a/help.html
+++ b/help.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help</title>
-    <script defer src="script/storage.js"></script>
-    <script defer src="templates/templates.js"></script>
+    <script defer src="./script/storage.js"></script>
+    <script defer src="./templates/templates.js"></script>
 
-    <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/legalNotice.css">
-    <link rel="stylesheet" href="templates/header_sidebar.css">
-    <link rel="stylesheet" href="style/help.css">
+    <link rel="stylesheet" href="./style/fonts.css">
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/legalNotice.css">
+    <link rel="stylesheet" href="./templates/header_sidebar.css">
+    <link rel="stylesheet" href="./style/help.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
