--- a/register.html
+++ b/register.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/register.css">
-    <link rel="stylesheet" href="style/help.css">
-    <link rel="stylesheet" href="style/fonts.css">
-    <link rel="stylesheet" href="style/login.css">
-    <script src="script/contacts.js"></script>
-    <script defer src="script/register.js"></script>
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/register.css">
+    <link rel="stylesheet" href="./style/help.css">
+    <link rel="stylesheet" href="./style/fonts.css">
+    <link rel="stylesheet" href="./style/login.css">
+    <script src="./script/contacts.js"></script>
+    <script defer src="./script/register.js"></script>
     <script defer src="./templates/templates.js"></script>
-    <script src="script/storage.js"></script>
+    <script src="./script/storage.js"></script>
 </head>
 
 <body onload="initRegister()">
