--- a/summary.html
+++ b/summary.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summary</title>
 
-    <link rel="stylesheet" href="templates/header_sidebar.css">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/summary.css">
+    <link rel="stylesheet" href="./templates/header_sidebar.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/summary.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./style/fonts.css">
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
 
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/summary.js"></script>
