shorted functions from task and created new empty task js files

--- a/board.html
+++ b/board.html
@@ -19,8 +19,11 @@
     <script src="./script/contacts.js"></script>
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/task.js"></script>
-    <!-- 
-    <script defer src="script/board-addTask-teamfunctions.js"></script> -->
+    <script defer src="./script/taskCategories.js"></script>
+    <script defer src="./script/taskContacts.js"></script>
+    <script defer src="./script/taskPriorities.js"></script>
+    <script defer src="./script/taskSubtasks.js"></script>
+
     <script defer src="./script/board.js"></script>
     <script defer src="./script/boardOpenTask.js"></script>
 </head>
