--- a/task.html
+++ b/task.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AddTask</title>
     <script src="./script/storage.js"></script>
-    <!-- <script defer src="script/addTask-templates.js"></script> -->
-    <!-- <script defer src="script/board-addTask-teamfunctions.js"></script> -->
+
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/contacts.js"></script>
     <script defer src="./script/task.js"></script>
+    <script defer src="./script/taskCategories.js"></script>
+    <script defer src="./script/taskContacts.js"></script>
+    <script defer src="./script/taskPriorities.js"></script>
+    <script defer src="./script/taskSubtasks.js"></script>
 
     <link rel="stylesheet" href="style/task.css">
     <link rel="stylesheet" href="style/addTask_media_query.css">
